--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -3,4 +3,25 @@
 
 {% block content %}
 <h1>Tasks</h1>
+
+
+<ul>
+{% for task in tasks %}
+<li >
+    <a style="text-decoration: underline;" href="{{task.id}}">
+        <h1>{{task.title}}</h1>
+    </a>
+    <p>{{task.description}}</p>
+    <p>Made by: {{task.user.username}}</p>
+    {% if task.important %}
+    <p style="color:red;">Urgent</p>
+    {% else %}
+    <p>No importante</p>
+    {% endif %}
+    
+    <hr>
+</li>
+{% endfor %}
+</ul>
+
 {% endblock content %}
