(feat): Creación de url update, and datecompleted

--- a/tasks/templates/layouts/base.html
+++ b/tasks/templates/layouts/base.html
@@ -21,6 +21,9 @@
         <li>
           <a href="{% url "tasks" %}">Tasks</a>
         </li>
+        <li>
+          <a href="{% url "tasks-completed" %}">Tasks Completed</a>
+        </li>
         
 
         {% if user.is_authenticated %}
