--- a/tasks/templates/layouts/base.html
+++ b/tasks/templates/layouts/base.html
@@ -10,36 +10,47 @@
     <title>DJANGO CRUD</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="">
   </head>
   <body>
-    <nav class="navbar container">
-      <ul>
-        <li>
-          <a href="{% url "home" %}">Home</a>
-        </li>
-        <li>
-          <a href="{% url "tasks" %}">Tasks</a>
-        </li>
-        <li>
-          <a href="{% url "tasks-completed" %}">Tasks Completed</a>
-        </li>
-        
-
-        {% if user.is_authenticated %}
-          <li>
-            <a href="{% url "logout" %}">Logout</a>
-          </li>
-        {%else %}
-          <li>
-            <a href="{% url "signin" %}">Login</a>
-          </li>
-          <li>
-            <a href="{% url "signup" %}">Register</a>
-          </li>
-        {% endif %}
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand ms-auto" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url "home" %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url "tasks" %}">Tasks</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url "tasks-completed" %}">Tasks Completed</a>
+            </li>
+            
+    
+            {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "logout" %}">Logout</a>
+              </li>
+            {%else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "signin" %}">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "signup" %}">Register</a>
+              </li>
+            {% endif %}
+          </ul>
+          
+        </div>
+      </div>
     </nav>
+    
     
     <main class="container">
       {% block content %}
