--- a/tasks/templates/tasks/create-task.html
+++ b/tasks/templates/tasks/create-task.html
@@ -2,13 +2,18 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
-<h1>Create Task</h1>
-
-{{error}}
-<form method="POST">
-  {% csrf_token %}
-  {{form.as_p}}
-  <button>Save</button>
-</form>
+<main class="container">
+  <div class="row">
+    <div class="col-md-4 offset-md-4">
+        <form method="POST" class="card card-body mt-5">
+          <h1>Create Task</h1>
+          {{error}}
+          {% csrf_token %}
+          {{form.as_p}}
+          <button class="btn btn-primary">Save</button>
+        </form>
+    </div>
+  </div>
+</main>
 
 {% endblock content %}
